--- a/Perceptrons/scikit-perceptron-on-iris.ipynb
+++ b/Perceptrons/scikit-perceptron-on-iris.ipynb
@@ -2,23 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn import datasets\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import Perceptron"
+    "from sklearn.linear_model import Perceptron\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from matplotlib.colors import ListedColormap\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "iris = datasets.load_iris()\n",
@@ -28,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,8 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 1, test_size = 0.3, stratify = y)"
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +92,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,8 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train_std = sc.transform(X_train)\n",
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +128,7 @@
        "      shuffle=True, tol=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,8 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_pred = ppn.predict(X_test_Std)"
@@ -139,20 +151,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "misclassified samples: 3\n"
+      "misclassified samples: 3\n",
+      "Accuracy : 0.93\n"
      ]
     }
    ],
    "source": [
-    "print('misclassified samples: %d' % (y_test != y_pred).sum())"
+    "print('misclassified samples: %d' % (y_test != y_pred).sum())\n",
+    "print('Accuracy : %.2f' % ppn.score(X_test_Std, y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_decision_regions(X, y, classifier, test_idx = None, resolution = 0.02):\n",
+    "    markers = ('s', 'x', 'o', '^', 'v')\n",
+    "    colors = ('red', 'blue', 'green', 'cyan', 'gray')\n",
+    "    cmap = ListedColormap(colors[:len(np.unique(y))])\n",
+    "    \n",
+    "    x1_min, x1_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
+    "    x2_min, x2_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
+    "    \n",
+    "    xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution), np.arange(x2_min, x2_max, resolution))\n",
+    "    \n",
+    "    Z = classifier.predict(np.array([xx1.ravel(), xx2.ravel()]).T)\n",
+    "    Z = Z.reshape(xx1.shape)\n",
+    "    \n",
+    "    plt.contourf(xx1, xx2, Z, alpha = 0.3, cmap = cmap)\n",
+    "    plt.xlim(xx1.min(), xx1.max())\n",
+    "    plt.ylim(xx2.min(), xx2.max())\n",
+    "    \n",
+    "    for idx, cl in enumerate(np.unique(y)):\n",
+    "        plt.scatter(x=X[y==cl, 0], y=X[y==cl, 1],\n",
+    "                    alpha = 0.8,\n",
+    "                    marker = markers[idx],\n",
+    "                    label=cl,\n",
+    "                    edgecolor='black')\n",
+    "    if test_idx:\n",
+    "        X_test, y_test = X[test_idx, :], y[test_idx]\n",
+    "        \n",
+    "        plt.scatter(X_test[:, 0], X_test[:, 1],\n",
+    "                   c='', edgecolor=black, alpha = 0.1,\n",
+    "                   linewidth = 1, marker = 'o', \n",
+    "                    s = 100, label = 'test set')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'black' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-a736c45a3b94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                      \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my_combined\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                      \u001b[0mclassifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mppn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m                      test_idx=range(105, 150))\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Petal length [Standadized]'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Petal width [Standadized]'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-e11f3fdfd459>\u001b[0m in \u001b[0;36mplot_decision_regions\u001b[0;34m(X, y, classifier, test_idx, resolution)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         plt.scatter(X_test[:, 0], X_test[:, 1],\n\u001b[0;32m---> 28\u001b[0;31m                    \u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medgecolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mblack\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m                    \u001b[0mlinewidth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'o'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                     s = 100, label = 'test set')\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'black' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "X_combined_std = np.vstack((X_train_std, X_test_Std))\n",
+    "y_combined = np.hstack((y_train, y_test))\n",
+    "\n",
+    "plot_decision_regions(X=X_combined_std,\n",
+    "                     y=y_combined,\n",
+    "                     classifier = ppn,\n",
+    "                     test_idx=range(105, 150))\n",
+    "plt.xlabel('Petal length [Standadized]')\n",
+    "plt.ylabel('Petal width [Standadized]')\n",
+    "plt.legend(loc='upper left')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
